@@ -68,6 +68,7 @@ ChangeLog (IOMETER 1 - 2004.nn.nn):
      (code cleanup of the dynamo parameter handling; switches are no
      longer option but required now)
 - Cleanup:
+   - Corrected the macro definition for BLKGETSIZE64 in IOCommon.h
    - Corrected the CPU speed detection output as it was proposed
      Kenneth Morse (rounding issue).
    - Changed the "truly batch oriented" patch behaviour (basically rolled
